<resources>
    <string name="app_name">SnapNStore</string>

    <string name="allow_your_gallery">Allow your Gallery</string>
    <string name="allow_your_camera">Allow your Camera</string>
    <string name="view">View</string>
    <string name="play">Play</string>
    <string name="write_videos_to_the_storage">Write Videos to the Storage</string>
    <string name="write_images_to_the_storage">Write Images to the Storage</string>
    <string name="read_images_from_the_storage">Read Images from the Storage</string>
    <string name="read_videos_from_the_storage">Read Videos from the Storage</string>
    <string name="select_image_from_storage">Select image from storage</string>
    <string name="name">Name</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="initial_point">00:00</string>
    <string name="colon">\u0020:\u0020</string>
    <string name="size">Size</string>
    <string name="mime_type">MIME Type</string>
    <string name="resolution">Resolution</string>
    <string name="select_multiple_files">Select multiple files</string>
    <string name="duration">Duration</string>
    <string name="video_player">Video Player</string>
    <string name="image_preview">Image Preview</string>
    <string name="select_image">Select Image</string>
    <string name="select_video_from_storage">Select video from storage</string>
    <string name="select_video">Select Video</string>
</resources>