<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnSelectImage"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/ivPlaceholder"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:alpha="0.5"
            android:src="@drawable/ic_image_gallery"
            app:layout_constraintBottom_toTopOf="@id/tvPlaceholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPlaceholder"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_image_from_storage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPlaceholder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnSelectImage"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivSelectedImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tlDetails"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TableLayout
            android:id="@+id/tlDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSelectedImage">

            <TableRow>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/name" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvImageFileName"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/size" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvImageFileSize"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/mime_type" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvImageFileType"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/resolution" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/tvImageFileResolution"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnSelectImage"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:listitem="@layout/item_image_data"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_image"
        app:layout_constraintBottom_toTopOf="@id/switchMultipleFiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchMultipleFiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_multiple_files"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp"
        tools:checked="true" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_55dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIv"
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_back_arrow" />

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>